# voice-openclaw-bridge-v2

./: .gitignore  ALL_IMPORTS_FIXED.md  ALL_IMPORT_FIXES_COMPLETE.md  ASYNCMOCK_FIXES_APPLIED.md  ASYNCMOCK_V2_FIX.md  ASYNCMOCK_VS_MOCK_INSIGHT.md  AUDIO_FILES_GENERATED.md  AUDIO_FILE_ANALYSIS.md  AUDIO_IO_GUIDE.md  AWAITING_TEST_RESULTS.md  BUG_ANALYSIS_FINAL.md  BUG_ANALYSIS_OPTION1.md  BUG_ANALYSIS_PLAN.md  BUG_DATABASE_DETAILED.md  BUG_DATABASE_STATUS.md  BUG_FINAL_REPORT_DRAFT.md  BUG_FIXES_APPLIED.md  BUG_MONITORING_ACTIVE.md  BUG_MONITORING_SETUP.md  BUG_REVIEW_COMPLETE.md  BUG_REVIEW_COMPLETE_REPORT.md  BUG_REVIEW_IN_PROGRESS.md  BUG_REVIEW_PRELIMINARY.md  BUG_STATUS_CURRENT.md  BUG_TRACKER.md  BUG_TRACKER_CLI_USER_GUIDE.md  CHANGELOG.md  CLEANUP_MD.sh  CLEANUP_PLAN.md  CODE_FINDINGS_PRELIM.md  CODE_ISSUES_FOUND.md  CODE_REVIEW_PLAN.md  CODE_REVIEW_STATUS.md  CODE_REVIEW_SUMMARY.md  CODE_STATS.md  COMMERCIAL_READINESS_ASSESSMENT.md  COMPLETE_ALL_IMPORT_FIXES.md  COMPLETE_PROGRESS_90_PERCENT.md  COMPLETE_PROGRESS_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.md  (+204 more)
.github/workflows/: ci.yml
config/: .env.template  config.yaml.template  default.yaml  development.yaml  production.yaml
docs/: OPENCLAW_GATEWAY_FINDINGS.md  openclaw-api-notes.md
scripts/: analyze_outstanding.py  benchmark_performance.py  create_bundle.sh  diagnose_e2e.sh  fix_all_bugs.py  fix_bugs.py  install.sh  manage_service.sh  monitor_bugs.py  review_bugs.py  setup.py  setup.sh  test_stability.py  uninstall.sh
src/: __init__.py
src/audio/: __init__.py  barge_in.py  interrupt_filter.py  stt_worker.py  tts_worker.py  wake_word.py
src/bridge/: __init__.py  audio_buffer.py  audio_discovery.py  audio_pipeline.py  barge_in_integration.py  bug_cli.py  bug_tracker.py  config.py  context_window.py  conversation_store.py  history_manager.py  main.py  middleware_context_integration.py  middleware_integration.py  openclaw_middleware.py  response_filter.py  session_manager.py  session_recovery.py  tool_chain_manager.py  vad.py  voice_orchestrator.py  websocket_client.py
tests/: TEST_PLAN.md  conftest.py  manual_test_bug_tracker.py  test_plan_bug_tracker.md
tests/fixtures/audio/: README.md  silence_2s.flac  speech_high_volume.flac  speech_like_2s.flac  speech_long_5s.flac  speech_low_volume.flac  speech_short_1s.flac  speech_stereo_2s.flac  tone_440hz_2s.flac
tests/integration/: BUG_TRACKER_TEST_RESULTS.md  test_audio_integration.py  test_barge_in.py  test_barge_in_integration.py  test_bug_tracker_github.py  test_config_integration.py  test_e2e_workflow.py  test_performance.py  test_response_filter_integration.py  test_session_integration.py  test_session_recovery_integration.py  test_voice_e2e.py  test_websocket_integration.py
tests/unit/: conftest.py  test_audio_buffer.py  test_audio_pipeline.py  test_barge_in.py  test_config.py  test_context_window.py  test_conversation_store.py  test_history_manager.py  test_middleware_context_integration.py  test_middleware_integration.py  test_openclaw_middleware.py  test_response_filter.py  test_session_manager.py  test_session_recovery.py  test_stt_worker.py  test_tool_chain_manager.py  test_tts_worker.py  test_vad.py  test_voice_orchestrator.py  test_wake_word.py  test_websocket_client.py
