[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-openclaw-bridge"
version = "1.0.0-beta"
description = "Production-ready bidirectional voice interface for OpenClaw"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ray Caron", email = "you@example.com"}
]
keywords = ["voice", "assistant", "ai", "openclaw", "stt", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=23.0",
    "tzdata>=2023.3",  # Required for pydantic-settings timezone support on Python 3.12
    
    # Async & Networking
    "websockets>=12.0",
    "aiohttp>=3.9",
    "asyncio-mqtt>=0.16",
    
    # Audio
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "pyaudio>=0.2",
    "webrtcvad>=2.0",
    "librosa>=0.10",
    
    # STT
    "faster-whisper>=1.0",
    "openai-whisper>=20231117",
    
    # TTS
    "numpy>=1.24",
    "onnxruntime>=1.16",
    "piper-tts>=1.2; platform_machine=='x86_64'",
    
    # Wake Word (optional)
    "pvporcupine>=3.0; platform_machine=='x86_64'",
    "pvrecorder>=1.2; platform_machine=='x86_64'",
    "openwakeword>=0.5",
    
    # Database
    "aiosqlite>=0.19",
    
    # Utilities
    "platformdirs>=3.0",
    "rich>=13.0",
    "typer>=0.9",
    "watchdog>=3.0",  # Config hot-reload
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.1",
    "mypy>=1.0",
    "black>=23.0",
    "pre-commit>=3.0",
    "types-pyyaml",
    "types-requests",
]

[project.scripts]
voice-bridge = "src.bridge.main:main"

[project.urls]
Homepage = "https://github.com/ray1caron/voice-openclaw-bridge-v2"
Documentation = "https://github.com/ray1caron/voice-openclaw-bridge-v2/blob/main/docs"
Repository = "https://github.com/ray1caron/voice-openclaw-bridge-v2"
Issues = "https://github.com/ray1caron/voice-openclaw-bridge-v2/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pvporcupine.*",
    "pvrecorder.*",
    "faster_whisper.*",
    "websockets.*",
    "sounddevice.*",
    "webrtcvad.*",
    "openwakeword.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "hardware: marks tests that require hardware",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*:",
    "ignore::pytest.PytestDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
